feat: added address field in object model and proto definition
